# AAPLCADsdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
apps/mac_viewer/: main.mm
docs/: AAPLCAD_Development_Plan.md  AAPLCAD_SDK_Design.md  CURRENT_STATUS.md
examples/minimal_viewer/: main.cpp
include/aaplcad/: aaplcad.h
include/aaplcad/core/: log.h  object_id.h  result.h  vector2d.h
include/aaplcad/database/: document.h  entity.h  layer.h  line_entity.h  transaction.h
include/aaplcad/geometry/: circle2d.h  extents2d.h  line2d.h  point2d.h
include/aaplcad/graphics/: draw_list_2d.h  selection_state_2d.h  view_interaction_state_2d.h  view_state_2d.h
include/aaplcad/platform/: input_event.h  platform.h
src/core/: log.cpp
src/database/: document.cpp
src/graphics/: draw_list_2d.cpp
src/platform/: input_event.cpp  platform.cpp
tests/unit/: test_core.cpp
